# spreadsheet-auditor

./: .gitignore  Makefile  README.md  go.mod  pyproject.toml  security_best_practices_report.md
.github/workflows/: ci.yml
cmd/spreadsheet-auditor/: main.go  main_test.go
desktop/: README.md  audit_service.go  audit_service_test.go  main.go  wails.json
desktop/frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
docs/: architecture.md  go-wails-evaluation.md  opportunity-report.md  package-readiness.md  parity-contract.md  product-brief.md  release-notes-v0.2.0.md  release-notes-v0.2.1.md  signing-distribution.md
internal/audit/: defined_names.go  errors.go  golden_test.go  lint.go  lint_test.go  mutation_guard_test.go  path.go  sheet_scan.go  sheet_scan_test.go  workbook.go
internal/evidence/: packet.go  packet_test.go  priority_test.go
internal/formula/: lint.go  lint_test.go  normalize.go  normalize_test.go  pattern.go  token.go
internal/model/: ai_handoff.go  evidence.go  issue_id.go  issue_id_test.go  priority.go  prompt_bundle.go  report.go  report_test.go  rules.go  understanding_validation.go
internal/priority/: assign.go  assign_test.go  report_json_test.go
internal/promptpack/: bundle.go  bundle_test.go  filter.go  instructions.go  redact.go
internal/reviewpack/: csv.go  details_json.go  export.go  export_test.go  (+2 more)
scripts/: emit_goldens.py  notarization_preflight_macos.sh  package_smoke_macos.sh  render_app_icon.go  signing_check_macos.sh
tests/: test_audit.py  test_cli.py  test_golden_parity.py
(+70 files in other folders)
