[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "spreadsheet-auditor"
version = "0.1.0"
description = "Local-first static auditor for inherited Excel workbooks."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Arthur Lee" }
]
dependencies = [
  "defusedxml>=0.7.1",
  "openpyxl>=3.1.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.11"
]

[project.scripts]
spreadsheet-auditor = "spreadsheet_auditor.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

